force-app/main/default/objects/Capitan__c/Capitan__c.object-meta.xml
<CustomObject>
    <label>Capitan</label>
    <nameField>
        <label>Capitan Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capitans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>