force-app/main/default/objects/Capitan__c/fields/Birth_Day__c.field-meta.xml
<CustomField>
    <fullName>Birth_Day__c</fullName>
    <label>Birth Day</label>
    <required>true</required>
    <type>Date</type>
</CustomField>