force-app/main/default/objects/Capitan__c/listViews/List1.listView-meta.xml
<ListView>
    <fullName>List1</fullName>
    <columns>NAME</columns>
    <columns>ID__c</columns>
    <columns>Birth_Day__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>List1</label>
</ListView>